--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -5,19 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="280dp"
     android:layout_marginHorizontal="5dp"
-    android:background="@color/black"
     android:elevation="13dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="393dp"
-        android:layout_height="264dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         android:elevation="30dp"
-        android:outlineAmbientShadowColor="@color/cardview_dark_background"
         app:cardBackgroundColor="#1C1C1C"
         app:cardCornerRadius="20dp"
-        tools:layout_editor_absoluteX="4dp"
-        tools:layout_editor_absoluteY="4dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -29,7 +33,7 @@
                 android:id="@+id/view"
                 android:layout_width="407dp"
                 android:layout_height="96dp"
-                android:background="#25670E"
+                android:background="#325E34"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +48,7 @@
                 android:text="TITULO"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="25sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/view"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -76,18 +80,18 @@
                 android:id="@+id/imageView"
                 android:layout_width="63dp"
                 android:layout_height="59dp"
-                android:layout_marginStart="18dp"
+                android:layout_marginStart="68dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="15dp"
                 android:background="#D2DDD3"
                 android:backgroundTint="#325E34"
-                android:tint="#FFFFFF"
                 app:layout_constraintBottom_toTopOf="@+id/imageView2"
                 app:layout_constraintEnd_toStartOf="@+id/t_user"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0"
-                app:srcCompat="@drawable/ic_user" />
+                app:srcCompat="@drawable/ic_user"
+                app:tint="#FFFFFF" />
 
             <TextView
                 android:id="@+id/t_password"
@@ -111,18 +115,18 @@
                 android:id="@+id/imageView2"
                 android:layout_width="63dp"
                 android:layout_height="59dp"
-                android:layout_marginStart="18dp"
+                android:layout_marginStart="68dp"
                 android:layout_marginEnd="10dp"
                 android:background="#1A771D"
                 android:backgroundTint="#325E34"
-                android:tint="#F8F7F7"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/t_password"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.921"
-                app:srcCompat="@drawable/ic_key" />
+                app:srcCompat="@drawable/ic_key"
+                app:tint="#F8F7F7" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
