--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -45,7 +45,8 @@
                 android:layout_width="352dp"
                 android:layout_height="50dp"
                 android:gravity="center"
-                android:text="TITULO"
+                android:text=""
+                android:hint="TITULO"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="20sp"
