--- a/app/src/main/res/layout/dialog_agregar.xml
+++ b/app/src/main/res/layout/dialog_agregar.xml
@@ -61,7 +61,8 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Nombre"
+                android:text=""
+                android:hint="Titulo"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -76,7 +77,8 @@
                 android:layout_height="44dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Usuario"
+                android:text=""
+                android:hint="Usuario"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.785"
@@ -90,7 +92,8 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Password"
+                android:text=""
+                android:hint="Password"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.885"
