--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -18,7 +18,8 @@
         android:inputType="numberPassword"
         android:maxLength="4"
         android:textAlignment="center"
-        android:textSize="30sp"
+        android:textSize="60sp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
